--- a/inphms/addons/base/views/ir_model_views.xml
+++ b/inphms/addons/base/views/ir_model_views.xml
@@ -245,7 +245,12 @@
                                 Quick Actions
                             </div>
                             <div class="action_button o-form-buttonbox list-group gap-2">
-                                <button groups="base.group_no_one" class="btn-outline-secondary rounded" icon="fa-align-justify" name="1" string="Create a Menu" type="action" target="new"/>
+                                <button groups="base.group_no_one"
+                                    class="btn-outline-secondary rounded" 
+                                    icon="fa-align-justify"
+                                    name="%(act_menu_create)d"
+                                    string="Create a Menu" type="action"
+                                    target="new" />
                             </div>
                         </div>
                     </sidepanel>
