--- a/addons/hr/views/res_partner_views.xml
+++ b/addons/hr/views/res_partner_views.xml
@@ -5,7 +5,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <div name="button_box" position="inside">
+            <div name="button_box_action" position="inside">
                 <button name="action_open_employees" type="object" class="oe_stat_button" icon="fa-id-card-o order-first" groups="hr.group_hr_user" invisible="employees_count == 0">
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_value"><field name="employees_count"/></span>
