--- a/addons/web/static/src/webclient/webclient.scss
+++ b/addons/web/static/src/webclient/webclient.scss
@@ -25,11 +25,113 @@ tfoot {
   position: relative; // normally useless but required by bootstrap-datepicker
   background-color: $o-webclient-background-color;
   color-scheme: $o-webclient-color-scheme;
+
+  .i_webclient_loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: black;
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+
+    .loading-background {
+      @include o-position-absolute(0,0,0,0);
+      // background: radial-gradient(circle at 50% 120%, #{$o-brand-inphms}, transparent 70%), radial-gradient(circle at 10% 20%, #0c152e, transparent 40%);
+      // animation: breath 8s ease-in-out infinite alternate;
+    }
+
+    .loading-content {
+      .loading-icon {
+        // animation: loading-glow 3s ease-in-out infinite;
+        // filter: brightness(0.3) sepia(1) hue-rotate(0deg) saturate(3);
+        // box-shadow: inset 0 2px 3px rgba(255, 255, 255, 0.3), inset 0 -2px 3px rgba(0, 0, 0, 0.2), 0 8px 20px rgba(0, 0, 0, 0.2);
+        // padding: 20px;
+      }
+
+      .loading-progress {
+        height: 4px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 4px;
+        overflow: hidden;
+        position: relative;
+        opacity: 0;
+        animation: fadeIn 1s ease-out forwards 0.6s;
+        .loading-progress-bar {
+          width: 0%;
+          height: 100%;
+          border-radius: 4px;
+          background: linear-gradient(90deg, rgba(255,255,255, 0.7), rgba(255,255,255, 0.5));
+          transition: width 0.3s cubic-bezier(0.22, 0.61, 0.36, 1);
+          position: relative;
+          &::after {
+              content: '';
+              @include o-position-absolute(0,0,0,0);
+              background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.8), transparent);
+              transform: translateX(-100%);
+              animation: loading-shimmer 1.5s infinite;
+          }
+        }
+      }
+
+      .loading-status-text {
+        text-align: center;
+        color: white;
+      }
+    }
+
+    .loading-footer {
+      @include o-position-absolute(auto, auto, 3rem);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+    }
+
+    &.boot-loading-leave {
+      animation: fadeOut 0.8s ease-out forwards;
+    }
+  }
 }
 
 // ------------------------------------------------------------------
 // Misc. widgets
 // ------------------------------------------------------------------
+
+// Animations
+@keyframes breath {
+  from {
+    transform: scale(1);
+    opacity: 0.6;
+  }
+  to {
+    transform: scale(1.1);
+    opacity: 0.9;
+  }
+}
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes loading-shimmer {
+  to {
+    transform: translateX(100%);
+  }
+}
+@keyframes loading-glow {
+  from {
+    filter: brightness(0.3) sepia(1) hue-rotate(0deg) saturate(3);
+  }
+  to {
+    filter: brightness(0.3) sepia(1) hue-rotate(360deg) saturate(3);
+  }
+}
 
 // Buttons
 .o_icon_button {
