--- a/addons/hr/views/res_users.xml
+++ b/addons/hr/views/res_users.xml
@@ -100,23 +100,27 @@
                 <xpath expr="//page[@name='calendar']" position="after">
                     <page name="private_information" string="Private">
                         <group>
-                            <group string="Private Information">
+                            <group class="mx-0 px-0" string="Private Information">
                                 <field name="employee_ids" invisible="1"/>
-                                <label for="private_street" string="Private Address"/>
-                                <div class="o_address_format">
-                                    <field name="private_street" placeholder="Street..." class="o_address_street"/>
-                                    <field name="private_street2" placeholder="Street 2..." class="o_address_street"/>
-                                    <field name="private_city" placeholder="City" class="o_address_city"/>
-                                    <field name="private_state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_create': True}" context="{'default_country_id': private_country_id}"/>
-                                    <field name="private_zip" placeholder="ZIP" class="o_address_zip"/>
-                                    <field name="private_country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
-                                </div>
-                                <field name="private_email" string="Private Email"/>
-                                <field name="private_phone" string="Private Phone" class="o_force_ltr"/>
+                                <group colspan="2">
+                                    <label for="private_street" string="Private Address"/>
+                                    <div class="o_address_format">
+                                        <field name="private_street" placeholder="Street..." class="o_address_street"/>
+                                        <field name="private_street2" placeholder="Street 2..." class="o_address_street"/>
+                                        <field name="private_city" placeholder="City" class="o_address_city"/>
+                                        <field name="private_state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_create': True}" context="{'default_country_id': private_country_id}"/>
+                                        <field name="private_zip" placeholder="ZIP" class="o_address_zip"/>
+                                        <field name="private_country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
+                                    </div>
+                                    <field name="private_email" string="Private Email"/>
+                                    <field name="private_phone" string="Private Phone" class="o_force_ltr"/>
+                                </group>
                             </group>
-                            <group string="Emergency Contact">
-                                <field name="emergency_contact" string="Contact Name" placeholder="e.g. John Doe"/>
-                                <field name="emergency_phone" string="Contact Phone" widget="phone"/>
+                            <group class="mx-0 px-0" string="Emergency Contact">
+                                <group colspan="2">
+                                    <field name="emergency_contact" string="Contact Name" placeholder="e.g. John Doe"/>
+                                    <field name="emergency_phone" string="Contact Phone" widget="phone"/>
+                                </group>
                             </group>
                         </group>
                     </page>
