--- a/addons/hr/views/hr_employee_category_views.xml
+++ b/addons/hr/views/hr_employee_category_views.xml
@@ -6,8 +6,10 @@
         <field name="arch" type="xml">
             <form string="Employee Tags">
                 <sheet>
-                    <group>
-                        <field name="name"/>
+                    <group string="Definition" class="mx-0 i__group rounded mb-4 border">
+                        <group colspan="2">
+                            <field name="name"/>
+                        </group>
                     </group>
                 </sheet>
             </form>
